# Qt6-Graphical-Effects

./: CMakeLists.txt  README.md
Qt5CompatDemo/: CMakeLists.txt  main.cpp  main.qml
Qt6MultiEffectDemo/: CMakeLists.txt  main.cpp  main.qml
Qt6ShaderDemo/: CMakeLists.txt  main.cpp  main.qml
